--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
+
+
+<ol>
+  <li data-ns-test="shoppingList">Bike</li>
+  <li data-ns-test="shoppingList">Car</li>
+  <li data-ns-test="shoppingList">House</li>
+</ol>
+<ul>
+  <li data-ns-test="holidayList">Paris</li>
+  <li data-ns-test="holidayList">Dubai</li>
+  <li data-ns-test="holidayList">Italy</li>
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
